force-app/main/default/objects/Community_Tag__c/Community_Tag__c.object-meta.xml
<CustomObject>
    <description>Define a library of Tags that will help categorize interests for the Community.  Tags can be associated to Community News, Events, Groups, and Contacts via separate junction objects.  This will allow the starter pack to recommend items to a Community user.</description>
    <label>Community Tag</label>
    <nameField>
        <label>Community Tag Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Tags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>