force-app/main/default/objects/Community_Tag__c/fields/Community_Theme__c.field-meta.xml
<CustomField>
    <fullName>Community_Theme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Represents the Theme of the Community Tag.</description>
    <inlineHelpText>Represents the Theme of the Community Tag.</inlineHelpText>
    <label>Community Theme</label>
    <referenceTo>Community_Theme__c</referenceTo>
    <relationshipLabel>Community Tags</relationshipLabel>
    <relationshipName>Community_Tags</relationshipName>
    <type>Lookup</type>
</CustomField>