force-app/main/default/objects/Community_Tag__c/fields/Icon_Style__c.field-meta.xml
<CustomField>
    <fullName>Icon_Style__c</fullName>
    <description>Describes the Icon style to be applied to these records in search results</description>
    <inlineHelpText>Describes the Icon style to be applied to these records in search results</inlineHelpText>
    <label>Icon Style</label>
    <length>150</length>
    <type>Text</type>
</CustomField>