force-app/main/default/objects/Community_Tag__c/fields/Tag_Theme_UniqueID__c.field-meta.xml
<CustomField>
    <fullName>Tag_Theme_UniqueID__c</fullName>
    <description>This field concatenates the Tag and Theme value to prevent duplicate values.</description>
    <label>Tag-Theme UniqueID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>