force-app/main/default/objects/Community_Tag__c/fields/Theme_Name__c.field-meta.xml
<CustomField>
    <fullName>Theme_Name__c</fullName>
    <description>the name of the theme the tag is associated with</description>
    <formula>Community_Theme__r.Name</formula>
    <label>Theme Name</label>
    <type>Text</type>
</CustomField>