force-app/main/default/objects/Community_Tag__c/fields/Theme_Type__c.field-meta.xml
<CustomField>
    <fullName>Theme_Type__c</fullName>
    <description>Represents the Theme Type of the Theme related to the Tag.</description>
    <formula>TEXT(Community_Theme__r.Theme_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Represents the Theme Type of the Theme related to the Tag.</inlineHelpText>
    <label>Theme Type</label>
    <type>Text</type>
</CustomField>