force-app/main/default/objects/Community_Tag__c/listViews/All_Tags.listView-meta.xml
<ListView>
    <fullName>All_Tags</fullName>
    <columns>Community_Theme__c</columns>
    <columns>NAME</columns>
    <columns>Theme_Type__c</columns>
    <columns>Icon_Style__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Tags</label>
    <language>en_US</language>
</ListView>