force-app/main/default/objects/Community_Tag__c/listViews/System_Tags.listView-meta.xml
<ListView>
    <fullName>System_Tags</fullName>
    <columns>Community_Theme__c</columns>
    <columns>NAME</columns>
    <columns>Icon_Style__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Theme_Type__c</field>
        <operation>equals</operation>
        <value>System</value>
    </filters>
    <label>System Tags</label>
    <language>en_US</language>
</ListView>